--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,12 @@
 <nav>
   <ul>
     <li>
-      <%= link_to "Sign in with GitHub", github_login_path %>
+      <% if current_user %>
+        Welcome, <%= current_user.login %>
+        <%= link_to "Logout", logout_path, method: :delete %>
+      <% else %>
+        <%= link_to "Sign in with GitHub", github_login_path %>
+      <% end %>
     </li>
   </ul>
 </nav>
