--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,29 @@
  body {
    background: #ffe4c1;
  }
+ div {
+   border: 1px solid black;
+   text-align: center;
+   margin-bottom: 2px;
+ }
+ h3 {
+   text-align: center;
+ }
+
+ li {
+   list-style-type: none;
+   padding: 2px;
+ }
+
+.profile_pic {
+  float: left;
+  margin: 10px
+}
+
+.organizations p {
+  text-align: center;
+}
+
+#profile_info{
+  height: 175px;
+}
